# write-up

./: README.md
.github/workflows/: azure-static-web-apps-gray-pond-02a298600.yml  backend-cd.yml  npm_test.yml
backend/: .env.example  README.md  alembic.ini  clean_all_pycache.sh  gunicorn.conf.py  pyproject.toml
backend/data/: ielts-task2-topics.csv
backend/migrations/: env.py
backend/migrations/versions/: 17b19ad637f5_add_topic_model.py  1cbf8d935f05_change_topics_id_to_uuid.py  3326dd722f2e_add_submission_evaluations_v2_table.py  4f1146ef2b65_create_user_profiles_table.py  783a52ddf7c9_add_created_by_to_topics_table.py  8383e9ee8956_add_topic_submissions_table.py  8a1993167057_create_subscriptions_user_credits_tables.py  8fd0aa64bd90_initial_migration.py  a5b0540344d3_change_string_columns_type_to_text.py  ad7b457d2774_change_ids_type_to_str.py  af2d6a890b70_add_topic_submissions_table.py  c8fe784c27b1_add_submission_evaluations_table.py  cdec8acde33f_change_topics_table_name_from_topic_to_.py  df5ed3dc846d_add_metadata_field_to_column.py  e05305c82d17_change_question_field_to_text_type.py  f3c16385856e_add_credits_constraints.py
backend/write-up-api/: web.py
backend/write-up-api/models/: User.py
backend/write-up-api/routers/user/: login.py  register.py
backend/write_up_api/: web.py
backend/write_up_api/common/: config.py  db_engine.py  dependencies.py  exceptions.py
backend/write_up_api/features/: __init__.py
backend/write_up_api/features/admin/: router.py
backend/write_up_api/features/auth/: dto.py  router.py  security.py
backend/write_up_api/features/notifications/: logs.py
backend/write_up_api/features/ocr/: __init__.py  router.py
backend/write_up_api/features/subscription/: __init__.py  dto.py  models.py  queries.py  router.py
backend/write_up_api/features/topic/: __init__.py  models.py  prompts.py  queries.py  router.py  router_v2.py  utils.py
backend/write_up_api/features/user/: __init__.py  dto.py  models.py  queries.py  router.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.mjs
frontend/src/: Router.tsx  WalletContext.tsx  main.tsx
frontend/src/pages/: Answer.page.tsx  Auth.page.tsx  Dashboard.page.tsx  Dashborad.page.tsx  History.page.tsx  MyTopics.tsx  PaymentSuccess.page.tsx  Profile.page.tsx  ProfileEdit.page.tsx  Result.page.tsx  Subscription.page.tsx  Topics.page.tsx  VerifyLogin.page.tsx
(+20 files in other folders)
