[tool.poetry]
name = "write-up-backend"
version = "0.1.0"
description = "A SaaS platform that leverages Large Language Models (LLMs) to assess and improve your writing skills for TOEFL and IELTS exams"
authors = ["HamadaSalhab <hamada.a.salhab@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.2"}
pydantic = "^2.9.2"
scalar-fastapi = "^1.0.3"
pydantic-settings = "^2.6.0"
mysqlclient = "^2.2.4"
pymysql = "^1.1.1"
sqlmodel = "^0.0.22"
alembic = "^1.13.3"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
requests = "^2.32.3"
pandas = "^2.2.3"
fastapi-pagination = "^0.12.31"
julep = "^1.24.0"
stripe = "^11.2.0"
tenacity = "^9.0.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
gunicorn = "^23.0.0"
uvloop = "^0.21.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"

[tool.poetry.scripts]
dev = "uvicorn write_up_api:app --reload"
prod = "gunicorn write_up_api:app -c gunicorn.conf.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
